# open-sensor

./: .gitignore  .gitmodules  PRIVACY.md  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  light_sensor_processor.cpp  light_sensor_processor.h  mqtt_client_wrapper.cpp  mqtt_client_wrapper.h  native-lib.cpp  openssl.cmake  sensor_processor.cpp  sensor_processor.h  temperature_sensor_processor.cpp  temperature_sensor_processor.h
app/src/main/java/com/opendevelopment/opensensor/: AccelerometerService.kt  BootReceiver.kt  GravityService.kt  GyroscopeService.kt  LightSensorService.kt  MainActivity.kt  MqttService.kt  ServiceManager.kt  SettingsDataStore.kt  SettingsViewModel.kt  TemperatureSensorService.kt
app/src/main/java/com/opendevelopment/opensensor/ui/theme/: Color.kt  IconToast.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_notification.xml  toast_background.xml
app/src/main/res/layout/: custom_toast.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
